--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
       <div class="contact-me">
         <h2>Get In Touch</h2>
         <h3>If you love tennis as much as I do.</h3>
-        <p class="ending-text">Love computer's as much as I do? Let's talk about how awesome they are!<br> I can also give you a tennis lesson afterwards.</p>
+        <p class="ending-text">Do you need some research or productivity tips? Let's talk about how it!<br> I can also give you a tennis lesson afterwards.</p>
         <a class="btn" href="mailto:losadarubiodiego@gmail.com">CONTACT ME</a>
 
       </div>
