--- a/index.html
+++ b/index.html
@@ -51,9 +51,9 @@
 
 
     <div class="bottom-container">
-      <a class="footer-link" href="https://www.linkedin.com/">LinkedIn</a>
+      <a class="footer-link" href="https://www.linkedin.com/in/diego-losada-rubio-741036169">LinkedIn</a>
       <a class="footer-link" href="https://twitter.com/">Twitter</a>
-      <a class="footer-link" href="https://www.appbrewery.co/">Website</a>
+      <a class="footer-link" href="https://losadadiego.github.io/CSSpersonalwebsite/">Website</a>
       <p class="footer-creator">© 2020 Losada Rubio Diego.</p>
     </div>
 
