--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       <div>
         <img class="profile_picture"src="images/Losada_Diego_2019 copy 2.png" alt="">
         <h2>Hello.</h2>
-        <p class="description">I am a rising senior studying Physics and Mathematics at Wofford College. Some of my
+        <p class="description">I am a rising senior studying Computer Science and Physics at Wofford College. Some of my
         interests are tennis, reading, problem solving and web development</p>
       </div>
       <hr>
